service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpsons-service
spec:
  selector:
    app: simpsons
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      # nodePort : 30080
  # type: NodePort
  type: LoadBalancer
